--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,15 @@ services:
       - ./bot/src:/home/node/app/src
       - ./bot/nodemon.json:/home/node/app/nodemon.json
     container_name: ts-node-docker
+    networks: 
+      - sail
     command: npm run dev
 
   redis:
     image: 'redis:alpine'
     container_name: redis-bot
     ports:
-      - "6382:6379"
+      - "6379:6379"
     networks:
       - sail
 
