--- a/bot/package.json
+++ b/bot/package.json
@@ -9,19 +9,17 @@
     "dev": "nodemon src/main.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Luiz Felipe",
   "license": "ISC",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^16.10.3",
-    "@types/redis": "^2.8.32",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.13",
+    "redis-messaging-manager": "^1.6.2",
     "telegraf": "^4.4.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.3"
   },
-  "dependencies": {
-    "redis": "^3.1.2"
-  }
+  "dependencies": {}
 }
