--- a/server/.env.example
+++ b/server/.env.example
@@ -23,9 +23,10 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
