--- a/server/.env.example
+++ b/server/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:20/Dwk+y3hEYWz8ZeLEPU3JWYn88DbRD5sEU7FUeOI8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_CONNECTION=mongodb
+DB_HOST=mongodb
+DB_PORT=27017
+DB_DATABASE=bot
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -23,10 +23,10 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=predis
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
